test(album): refatora controller test com jsonPath e evita NPE